hello-kubernetes-routingManifest.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-kubernetes-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hello.ci.mls.dev.os.uk"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: hello-kubernetes-cert
    hosts:
    - "hello.ci.mls.dev.os.uk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-kubernetes-virtual-service
spec:
  hosts:
  - "hello.ci.mls.dev.os.uk"
  gateways:
  - hello-kubernetes-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-kubernetes-service.default.svc.cluster.local
        port:
          number: 80
